<resources>
    <string name="app_name">Xplora</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="ing_usr">Ingrese Usuario</string>
    <string name="psw">Ingrese Contraseña</string>
    <string name="inc_ses">Iniciar Sesión</string>
    <string name="name">Ingrese Nombre</string>
    <string name="country">Ingrese País</string>
    <string name="address">Ingrese E-mail</string>
    <string name="passw">Ingrese Contraseña</string>
    <string name="passw2">Confirme Contraseña</string>
    <string name="registre">Registrarse</string>
    <string name="title_activity_first">FirstActivity</string>


    <string name="main">Inicio</string>
    <string name="menssages">Chat</string>
    <string name="fab">Favoritos</string>
    <string name="profile">Perfil</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="fab_m">Mas visitados</string>


    <string name="countries">Paises</string>
    <string name="Add">Agregar Destino</string>


    <string-array name="array_type">
        <item>Tipo de Destino</item>
        <item>Arquitectura</item>
        <item>Naturaleza</item>
        <item>Ciudad</item>
    </string-array>


    <string name="recommendation">Recomendaciones</string>

    <string name="more_info">Más Información</string>

    <string name="errorNoComment">Por favor escriba un comentario...</string>


    <string name="addfab">Agregar a favoritos</string>
    <string name="removefab">Quitar de favoritos</string>
    <string name="report">Reportar</string>



    <string name="add_OK">Agregado Correctamente</string>
    <string name="add_error">Error al agregar</string>
    <string name="remove_OK">Quitado correctamente</string>
    <string name="remove_error">Error al quitar</string>



</resources>
