<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    tools:context=".fragments.RegisterFragment">
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_margin="5dp"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:scrollbars="vertical"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:weightSum="1">

    <ImageButton
        android:id="@+id/imageButtonPhotoRegister"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:layout_weight="0.1"
        android:background="@null"
        app:srcCompat="@android:drawable/ic_menu_camera" />

    <ScrollView
        android:scrollbars="vertical"
        android:padding="5dp"
        android:fillViewport="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:paddingBottom="5dp"
            android:background="@drawable/roundcorner"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/editTextNameRegister"
                android:layout_width="227dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:hint="@string/name"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/editTextEmailRegister"
                android:layout_width="227dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:hint="@string/address"
                android:inputType="textEmailAddress" />

            <Spinner
                android:id="@+id/spinnerCountry"
                android:layout_width="227dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />

            <EditText
                android:id="@+id/editTextPswRegister"
                android:layout_width="227dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:hint="@string/passw"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/editTextPswConfirmRegister"
                android:layout_width="227dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:hint="@string/passw2"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/buttonRegister"
                android:layout_width="182dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/registre" />

        </LinearLayout>
    </ScrollView>

    </LinearLayout>
</ScrollView>
